# mcmc_bench

./: .gitignore  README.md  pyproject.toml  setup_env.sh
gaussian_mix/output/affinv/: diagnostics.json  idata.nc
gaussian_mix/output/benchmark/: benchmark_results.json
gaussian_mix/output/deo/: diagnostics.json  idata.nc
gaussian_mix/output/ns/: diagnostics.json  idata.nc
gaussian_mix/output/nuts/: diagnostics.json  idata.nc
gaussian_mix/output/rwmh/: diagnostics.json  idata.nc
gaussian_mix/output/scaling/: results.json
gaussian_mix/output/scaling_compute/: results.json
gaussian_mix/output/seo/: diagnostics.json  idata.nc
gaussian_mix/output/smc/: diagnostics.json  idata.nc
gaussian_mix/scripts/: affinv.py  benchmark.py  deo.py  get_grad_correction.py  ns.py  nuts.py  run_benchmark.sh  run_get_grad_correction.sh  run_scaling.sh  run_scaling_study.sh  run_scaling_study_compute.sh  rwmh.py  scaling_study.py  scaling_study_compute.py  seo.py  smc.py
gaussian_mix/src/: model.py
gaussian_mix/tests/: test_model.py
progress/: progress.aux  progress.bbl  progress.blg  progress.fdb_latexmk  progress.fls  progress.tex
sajax/output/affinv/: diagnostics.json  sajax_idata.nc
sajax/output/deo/: diagnostics.json  idata.nc
sajax/output/ns/: diagnostics.json  sajax_idata.nc
sajax/output/nuts/: diagnostics.json  sajax_idata.nc
sajax/output/scaling_compute/: results_affinv.json  results_deo.json  results_ns.json  results_ns_small.json  results_rwmh.json  results_seo.json  results_smc.json
sajax/output/seo/: diagnostics.json  (+1 more)
sajax/scripts/: affinv.py  deo.py  ns.py  nuts.py  pilot_ns.py  pilot_smc.py  run_affinv.sh  run_deo.sh  run_ns.sh  run_ns_small_budgets.py  run_ns_small_budgets.sh  run_nuts.sh  run_pilot_ns.sh  run_rwmh.sh  run_scaling_sampler.sh  run_scaling_study_compute.sh  run_seo.sh  rwmh.py  scaling_config.py  scaling_plot.py  scaling_run_sampler.py  scaling_study_compute.py  seo.py  smc.py
sajax/src/: model.py
tests/: run_tests.sh
tests/gaussian_mix/: test_model.py
tests/sajax/: test_model.py
(+2 files in other folders)
