[project]
name = "blackjax-benchmarks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "blackjax",
    "numpyro",
    "exojax",
    "numpy",
    "matplotlib",
    "scipy",
    "optax",
    "arviz",
    "ipython",
    "pytest",
    "pytest-cov",
    "jaxns",
    "tensorflow",
    "emcee_jax @ git+https://github.com/SamMerc/emcee-jax.git",
    "sajax @ git+https://github.com/SamMerc/sajax.git"
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
include = ["*/src/*"]

[tool.coverage.report]
fail_under = 50

[project.optional-dependencies]
cpu = ["jax[cpu]", "jaxlib"]
gpu = ["jax[cuda12]", "jaxlib"]

