[project]
name = "blackjax-benchmarks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "blackjax",
    "numpyro",
    "numpy",
    "matplotlib",
    "scipy",
    "optax",
    "arviz",
    "ipython",
    "pytest",
    "pytest-cov",
    "jaxns",
    "tensorflow",
    "emcee_jax @ git+https://github.com/SamMerc/emcee-jax.git",
    "sajax",
    "jaxoplanet",
    "astropy",
    "pt_jax @ git+https://github.com/lmarthur/pt-jax.git"
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
include = ["*/src/*"]

[tool.coverage.report]
fail_under = 75

[project.optional-dependencies]
cpu = ["jax[cpu]", "jaxlib"]
gpu = ["jax[cuda12]", "jaxlib"]

